updates for clion and added spdlog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,23 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(libsodium)
 
+FetchContent_Declare(
+    spdlog
+    GIT_REPOSITORY https://github.com/gabime/spdlog.git
+    GIT_TAG v1.15.0
+)
+FetchContent_MakeAvailable(spdlog)
+
 option(ENABLE_TESTS "Build tests" ON)
 
 # Define the saltpipe static library
 add_library(saltpipe STATIC src/saltpipe.cpp)
 
 # Make include directory available
-target_include_directories(saltpipe PUBLIC include)
+target_include_directories(saltpipe PUBLIC 
+    include
+    ${libsodium_SOURCE_DIR}/src/libsodium/include
+)
 
 # Link libsodium to the saltpipe library
 target_link_libraries(saltpipe PUBLIC sodium)
@@ -27,7 +37,7 @@ target_link_libraries(saltpipe PUBLIC sodium)
 add_executable(salt-pipe src/main.cpp)
 
 # Link the executable against our library
-target_link_libraries(salt-pipe PRIVATE saltpipe)
+target_link_libraries(salt-pipe PRIVATE saltpipe spdlog::spdlog)
 
 if(ENABLE_TESTS)
   # Add testing logic here in the future
